fix relative path

--- a/fragments/guide_mac_qemu.html
+++ b/fragments/guide_mac_qemu.html
@@ -16,9 +16,9 @@
 <body>
     <h1>Di Jin's Personal Page</h1>
     <nav><ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li>Publications &amp Projects</li>
-      <li><a href="random_things.html">Random Things</a></li>
+      <li><a href="../random_things.html">Random Things</a></li>
       <li>Fragments of my Life</li>
     </ul></nav>
     <hr />
