--- a/fragments/guide_mac_qemu.html
+++ b/fragments/guide_mac_qemu.html
@@ -19,7 +19,7 @@
       <li><a href="../index.html">Home</a></li>
       <li>Publications &amp Projects</li>
       <li><a href="../random_things.html">Random Things</a></li>
-      <li>Fragments of my Life</li>
+      <li><a href="../fragments.html">Fragments of my Life</a></li>
     </ul></nav>
     <hr />
 <h2>Create a Debian VM on MacOS Apple Silicon with Qemu</h2>
