remove nav in fragments

--- a/fragments/guide_mac_qemu.html
+++ b/fragments/guide_mac_qemu.html
@@ -14,14 +14,14 @@
     </style>
 </head>
 <body>
-    <h1>Di Jin's Personal Page</h1>
-    <nav><ul>
-      <li><a href="../index.html">Home</a></li>
-      <li>Publications &amp Projects</li>
-      <li><a href="../random_things.html">Random Things</a></li>
-      <li><a href="../fragments.html">Fragments of my Life</a></li>
-    </ul></nav>
-    <hr />
+    <!-- <h1>Di Jin's Personal Page</h1> -->
+    <!-- <nav><ul> -->
+    <!--   <li><a href="../index.html">Home</a></li> -->
+    <!--   <li>Publications &amp Projects</li> -->
+    <!--   <li><a href="../random_things.html">Random Things</a></li> -->
+    <!--   <li><a href="../fragments.html">Fragments of my Life</a></li> -->
+    <!-- </ul></nav> -->
+    <!-- <hr /> -->
 <h2>Create a Debian VM on MacOS Apple Silicon with Qemu</h2>
 
 <p>Couple of things before everything. Firstly, make sure your machine
