Reorder stuff and add some templated generation. Not using existing framework because that feels like over-design for my need

--- a/templates/base.tplt.html
+++ b/templates/base.tplt.html
@@ -19,16 +19,9 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="publications.html">Publications &amp Projects</a></li>
       <li><a href="random_things.html">Random Things</a></li>
-      <li>Fragments of my Life</li>
+      <li><a href="fragments.html">Fragments of my Life</a></li>
     </ul></nav>
     <hr />
-    <p>
-      Here are something that I needed to do but not being immediately
-      online. I've spent hours trying to figured out, hence the name
-      of the section.
-    </p>
-    <p><a href="fragments/guide_mac_qemu.html">Create a Debian VM on MacOS Apple Silicon with Qemu</a></p>
-    
-    
+    <page-body></page-body>
   </body>
 </html>
