--- a/templates/index.tplt.html
+++ b/templates/index.tplt.html
@@ -1,11 +1,14 @@
 <section>
   <h3>Biography</h3>
-  <p>
-    I'm a final year CS PhD candidate at Brown University, advised by
-    Vasileios P. Kemerlis.  My research interest includes kernel
-    security, software hardening, and other security related topics.
-  </p>
   <img src="static/b.png" alt="The Guy" class="photo"/>
   <p style="color: #666666"><small>Art by <a href="https://twitter.com/CarBotAnimation">CarBot</a></small></p>
+  <p>
+    My name is Di Jin (金迪). I am a postdoc researcher
+    at <a href="https://atlas.cs.brown.edu/">Atlas</a> in Brown
+    University, working with Nikos Vasilakis. My research interests
+    include system security, software hardening, and other security
+    and system related topics. I received my PhD from Brown
+    University, advised by Vasileios P. Kemerlis.
+  </p>
   <p> Email: <img src="static/ea.png" height="14pt" alt="ea"/></p>
 </section>
