--- a/templates/index.tplt.html
+++ b/templates/index.tplt.html
@@ -4,7 +4,7 @@
   <p style="color: #666666"><small>Art by <a href="https://twitter.com/CarBotAnimation">CarBot</a></small></p>
   <p>
     My name is Di Jin (金迪). I am a postdoc researcher
-    at <a href="https://atlas.cs.brown.edu/">Atlas</a> in Brown
+    at <a href="https://atlas.cs.brown.edu/">Atlas Group</a>, Brown
     University, working with Nikos Vasilakis. My research interests
     include system security, software hardening, and other security
     and system related topics. I received my PhD from Brown
