--- a/templates/index.tplt.html
+++ b/templates/index.tplt.html
@@ -8,7 +8,8 @@
     University, working with Nikos Vasilakis. My research interests
     include system security, software hardening, and other security
     and system related topics. I received my PhD from Brown
-    University, advised by Vasileios P. Kemerlis.
+    University, advised by Vasileios P. Kemerlis. I did my undergrad
+    in IIIS (Yao Class), Tsinghua University.
   </p>
   <p> Email: <img src="static/ea.png" height="14pt" alt="ea"/></p>
 </section>
