update refcell stuff

--- a/templates/fragments.tplt.html
+++ b/templates/fragments.tplt.html
@@ -4,4 +4,4 @@
   of the section.
 </p>
 <p><a href="fragments/guide_mac_qemu.html">Create a Debian VM on MacOS Apple Silicon with Qemu</a></p>
-
+<p><a href="fragments/understanding_refcell.html">A Way to Understand RefCell in Rust</a></p>
