--- a/fragments/understanding_refcell.html
+++ b/fragments/understanding_refcell.html
@@ -1,7 +1,7 @@
 <html><head>
     <style>
       body {
-          max-width: 800px;
+          max-width: 60em;
           margin: auto;
           padding: 10px;
       }
