--- a/fragments/understanding_refcell.html
+++ b/fragments/understanding_refcell.html
@@ -25,9 +25,10 @@
 
 <h2>A Way to Understand <code>RefCell</code> in Rust</h2>
 
-<p>Rust is great. All the rules around references make sure that no bad
-things happen.  Then something confused me (obviously one of many
-times this happens, Rust is confusing to untrained brains): <code>RefCell</code>.</p>
+<p>Rust is great. All the rules around references prevent bad things
+from happening.  Then something confused me (obviously one of many
+times this happens, Rust is confusing to untrained
+brains): <code>RefCell</code>.</p>
 
 <p>There is a Rust rule saying that mutable references shouldn't have any
 alias, what's the point of <code>RefCell</code> just baypassing all that
