--- a/fragments/understanding_refcell.html
+++ b/fragments/understanding_refcell.html
@@ -31,7 +31,7 @@ times this happens, Rust is confusing to untrained
 brains): <code>RefCell</code>.</p>
 
 <p>There is a Rust rule saying that mutable references shouldn't have any
-alias, what's the point of <code>RefCell</code> just baypassing all that
+alias, what's the point of <code>RefCell</code> just bypassing all that
 restrictions?  All the terms like <em>interior mutability</em> are great.
 But I still couldn't intuitively understand why that's the case until
 recently. But recently I figured out a link that make things fit
