updated format and automation for fragments

--- a/templates/base.tplt.html
+++ b/templates/base.tplt.html
@@ -4,12 +4,25 @@
     <title>Di Jin's Personal Page</title>
     <style>
       body {
-	  max-width: 60em;
+	  max-width: 800px;
 	  margin: auto;
 	  padding: 10px;
       }
       .photo {
 	  width: 200px;
+      }
+      code {
+          max-width: 800px;
+          background-color: #eeeeee;
+          overflow: auto;
+      }
+      pre {
+	  padding-top: 5px;
+	  padding-bottom: 5px;
+	  padding: 5px;
+          max-width: 800px;
+          background-color: #eeeeee;
+          overflow: auto;
       }
     </style>
   </head>
@@ -22,6 +35,6 @@
       <li><a href="fragments.html">Fragments of my Life</a></li>
     </ul></nav>
     <hr />
-    <page-body></page-body>
+<page-body></page-body>
   </body>
 </html>
