--- a/fragments/guide_mac_qemu.html
+++ b/fragments/guide_mac_qemu.html
@@ -56,9 +56,9 @@ to store the vm disk. Let's get started.</p>
 /opt/homebrew/bin/qemu-system-aarch64
 </code></pre>
 
-<p>Now download a debian installation image, here we use the netinst image for Debian 12 (bookworm)</p>
+<p>Now download a debian installation image, here we use the netinst image for Debian 13 (trixie)</p>
 
-<pre><code>$ wget https://cdimage.debian.org/debian-cd/current/arm64/iso-cd/debian-12.5.0-arm64-netinst.iso
+<pre><code>$ wget https://cdimage.debian.org/debian-cd/current/amd64/iso-cd/debian-13.1.0-amd64-netinst.iso
 </code></pre>
 
 <h3>Creating the files</h3>
@@ -96,7 +96,7 @@ being used by default)</p>
 <pre><code>$ qemu-system-aarch64 -M virt \
                       -accel hvf \
                       -smp 2 -m 8G -cpu host \
-                      -boot d -cdrom debian-12.5.0-arm64-netinst.iso \
+                      -boot d -cdrom debian-13.1.0-amd64-netinst.iso \
                       -drive "format=raw,file=edk2-aarch64-code.fd,if=pflash,readonly=on" \
                       -drive "format=raw,file=ovmf_vars.fd,if=pflash" \
                       -hda disk.img \
